--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -18,3 +18,9 @@ AAAI:
 
 PAMI:
   url: http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?reload=true&punumber=34
+
+BMVC:
+  url: www.bmva.org/bmvc
+
+SDM:
+  url: http://www.siam.org/meetings/sdm17/
