--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 # Site Settings
 # -----------------------------------------------------------------------------
 
-name: Anthony Platanios
-email: e.a.platanios@cs.cmu.edu
+name: Otilia Stretcu
+email: ostretcu@cs.cmu.edu
 description: > # this means to ignore newlines until "url:"
   My personal website.
 footer_text: >
@@ -16,14 +16,14 @@ baseurl:  # the subpath of your site, e.g. /blog/
 # -----------------------------------------------------------------------------
 # Social Integration
 # -----------------------------------------------------------------------------
-scholar_userid: EFVk-mwAAAAJ
-github_username: eaplatanios
-linkedin_username: eplatanios
-facebook_username: anthony.platanios
+scholar_userid: UcT4CXoAAAAJ
+github_username: otiliastr
+linkedin_username: otiliastr
+facebook_username: otilia.stretcu
 # twitter_username:
 contact_note: Feel free to drop me a line via email.
 
-google_analytics: UA-54519238-1
+#google_analytics: UA-54519238-1
 
 # -----------------------------------------------------------------------------
 # Blog
