Updated CV, teaching, news.

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -37,5 +37,8 @@ Song:
 Talukdar:
   url: http://talukdar.net/
 
+Toneva:
+  url: http://www.cs.cmu.edu/~mktoneva/
+
 Zhao:
   url: https://www.cs.cmu.edu/~hzhao1/
