Changed publication links.

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,8 +1,17 @@
+Chrabaszcz:
+  url: https://www.lrdc.pitt.edu/people/researcher-detail.cshtml?id=1976
+
 Faloutsos:
   url: http://www.cs.cmu.edu/~christos/
 
+Fiez:
+  url: https://www.lrdc.pitt.edu/people/researcher-detail.cshtml?id=10
+
 Fu:
   url: http://people.oregonstate.edu/~fuxia/
+
+Holt:
+  url: https://www.cmu.edu/dietrich/psychology/people/core-training-faculty/holt-lori.html
 
 Huang:
   url: https://sites.google.com/a/umn.edu/huang663/
@@ -13,17 +22,29 @@ Gordon:
 Leordeanu:
   url: https://sites.google.com/site/mariusleordeanu/home
 
+Lipski:
+  url: http://www.neurosurgery.pitt.edu/person/witold-lipski
+
 Mitchell:
   url: http://www.cs.cmu.edu/~tom/
 
 Negrinho:
   url: https://www.cs.cmu.edu/~negrinho/
 
+Neubig:
+  url: http://www.phontron.com/
+
+Neumann:
+  url: https://www.researchgate.net/profile/Wolf_Julian_Neumann
+
 Papalexakis:
   url: http://www.cs.ucr.edu/~epapalex/
 
 Poczos:
   url: http://www.cs.cmu.edu/~bapoczos/
+
+Richardson:
+  url: http://www.neurosurgery.pitt.edu/person/mark-richardson
 
 Sidiropoulo:
   url: http://people.ece.umn.edu/~nikos/
