Added EMIM details.

--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -4,6 +4,9 @@ arXiv:
 CMU:
   url: http://www.ml.cmu.edu/
 
+EMIM:
+  url: http://www.e-smi.eu/index.php?id=emim-2015-tubingen
+
 ICML:
   url: http://www.icml.cc/
 
