--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -22,6 +22,9 @@ Gordon:
 Leordeanu:
   url: https://sites.google.com/site/mariusleordeanu/home
 
+Lio:
+  url: https://www.cl.cam.ac.uk/~pl219/
+
 Lipski:
   url: http://www.neurosurgery.pitt.edu/person/witold-lipski
 
@@ -45,6 +48,9 @@ Poczos:
 
 Richardson:
   url: http://www.neurosurgery.pitt.edu/person/mark-richardson
+
+Shavit:
+  url: https://www.linkedin.com/in/yoli-shavit-76832856/?originalSubdomain=uk
 
 Sidiropoulo:
   url: http://people.ece.umn.edu/~nikos/
