Updated CV pdf.

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -179,6 +179,8 @@
     - year: 2018-present
       title: 'Founding member of the <a href="http://cmu.aiplus.club/" target="_blank"><b> AI+ Club</b></a>  at Carnegie Mellon University (CMU).'
     - year: 2018-present
+      title: 'Program Committees: ICML (2019), AISTATS (2019), ICLR-LLD (2019), ICLR (2018).'
+    - year: 2018-present
       title: 'Treasurer of the Romanian Students Association at CMU.'
     - year: 2016-present
       title: 'Member of the Doctoral Review Committee of the Machine Learning Department at CMU.'
