--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -70,6 +70,9 @@ Papalexakis:
 Poczos:
   url: http://www.cs.cmu.edu/~bapoczos/
 
+Póczos:
+  url: http://www.cs.cmu.edu/~bapoczos/
+
 Platanios:
   url: http://platanios.org/
 
