--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -139,5 +139,8 @@ Turner:
 Viswanathan:
   url: https://www.linkedin.com/in/krishnamurthy-viswanathan-14b65a42/
 
+Wehbe:
+  url: https://www.cs.cmu.edu/~lwehbe/
+
 Zhao:
   url: https://www.cs.cmu.edu/~hzhao1/
