--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -159,7 +159,7 @@
     - Graduate level deep learning class <a href="http://www.cs.cmu.edu/~rsalakhu/10707/" target="_blank"><b>10-707 Topics in Deep Learning</b></a> at Carnegie Mellon University
     - Taught by <a href="https://www.cs.cmu.edu/~rsalakhu/" target="_blank"><b>Prof. Ruslan Salakhutdinov</b></a>
   - title: 'Teaching algorithms for competitive programming'
-    year: 2013-14
+    year: 2013 - 2014
     location: Romania
     description:
     - Co-organized a competitive programming seminar at Politehnica University of Timisoara for university and high-school students interested to train for algorithmic competitions (e.g. ACM-ICPC, informatics olympiad).
@@ -198,14 +198,14 @@
   - year: 2019 - now
     description:
       - 'Mentorship:'
-      - '- Mentor for the CMU AI mentoring program (2019--2020)'
-      - '- Mentor for first year PhD students at CMU (2019--2020)'
+      - '- Mentor for the CMU AI mentoring program (2019 - now)'
+      - '- Mentor for first year PhD students at CMU (2019 - now)'
   - year: 2019
     description: 'Organized a workshop on <a href="https://www.amtl-workshop.org/home" target="_blank"><b>Adaptive & Multitask Learning</b></a> at ICML 2019.'
   - year: 2018 - now
     description: 'Founding member of the <a href="http://cmu.aiplus.club/" target="_blank"><b> AI+ Club</b></a>  at Carnegie Mellon University (CMU).'
   - year: 2018 - now
-    description: 'I was a reviewer for the following journals, conferences and workshops: ICML (2019), AISTATS (2019, 2020), ICLR (2018, 2020), ICLR-LLD (2019), PLOS ONE (2019), ICML-GRL (2020), NeurIPS (2020).'
+    description: 'I was a reviewer for the following journals, conferences and workshops: ICML (2019), AISTATS (2019, 2020), ICLR (2018, 2020), ICLR-LLD (2019), PLOS ONE (2019), ICML-GRL (2020), NeurIPS (2020), AAAI (2021).'
   - year: 2018 - 2019
     description: 'Treasurer of the Romanian Students Association at CMU.'
   - year: 2016 - now
