--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -11,7 +11,7 @@
 - title: Research Areas
   type: list
   contents:
-  - My PhD research focuses on developing algorithms for machine learning, mainly focused on semi-supervised learning, curriculum learning, multitask learning, and graph-based problems.
+  - My research focuses on developing algorithms for machine learning, mainly focused on semi-supervised learning, curriculum learning, multitask learning, and graph-based problems.
   - I am also interested in creating AI agents that can understand language and reason, therefore I have also worked on natural language processing with a focus on question answering and problem solving.
   - I have also worked on machine learning methods for neuroscience, with the goal of understanding how the human brain understands language and controls speech.
 
@@ -19,7 +19,7 @@
   type: table
   contents:
   - title: Carnegie Mellon University – Ph.D. in Machine Learning
-    year: 2015 - now
+    year: 2015 - 2021
     location: USA
     description:
     - 'Co-advised by <a href="http://www.cs.cmu.edu/~tom/" target="_blank"><b>Prof. Tom Mitchell</b></a> and <a href="http://www.cs.cmu.edu/~bapoczos/" target="_blank"><b>Dr. Barnabàs Pòczos</b></a>'
@@ -56,6 +56,11 @@
 - title: Work Experience
   type: table
   contents:
+  - title: 'Research Scientist at Google AI'
+    year: 2021 - now
+    location: USA
+    description:
+      - 'Mountain View, CA, USA'
   - title: 'Software Engineering Intern at Google Research'
     year: 'Summer 2018 <br/> & <br/> Spring 2019'
     location: USA
